--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,13 @@
 layout: compress
 ---
 <!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
+<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 {% include head.html %}
 
 <body>
+  {% include messenger.html %}
   <div class="wrapper">
     {% include sidebar.html %}
 
@@ -22,4 +23,3 @@ layout: compress
 </body>
 
 </html>
-
