overhaul the website

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="center">
+    <div class="img-center">
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. */-->
         <small class="copyright">{{ site.data.data.footer }}</small>
     </div><!--//container-->
