overhaul the website

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,11 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
+    <meta property="og:type" content="business.business">
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:site_name" content="MyBetterWeb">
+    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:image" content="assets/images/og-logo.jpg">
+
 </head>
