--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,10 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <!-- ShareThis -->
+    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5bfab345a0286b00115a8e3a&product=gdpr-compliance-tool"></script>
 
+    <!-- Facebook og markup -->
     <meta property="og:type" content="business.business">
     <meta property="og:title" content="{{ site.title }}">
     <meta property="og:url" content="{{ site.url }}">
