--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,10 +3,10 @@
     MyBetterWeb
   </h2>
   <ul class="list-unstyled interests-list">
-    <a target="_blank" href="http://mybetterweb.site">
+    <a href="http://mybetterweb.site">
       <li>Home</li>
     </a>
-    <a target="_blank" href="http://about.mybetterweb.site">
+    <a href="http://about.mybetterweb.site">
       <li>About</li>
     </a>
     <a class="typeform-share button" href="https://peranakanfrancis1.typeform.com/to/bNlaNF" data-mode="popup" data-hide-headers=true data-hide-footer=true data-submit-close-delay="5" target="_blank">Contact</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
