--- a/_includes/apple-icon.html
+++ b/_includes/apple-icon.html
@@ -1,5 +1,5 @@
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="assets/images/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="76x76" href="assets/images/apple-touch-icon-76x76.png" />
