--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,4 +35,5 @@
     <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5bfab345a0286b00115a8e3a&product=gdpr-compliance-tool"></script>
 
     {% seo %}
+    {% include mailchim_connect.html %}
 </head>
