--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@ layout: compress
 {% include head.html %}
 
 <body>
+  {% include mwa.html %}
   {% include messenger.html %}
   <div class="wrapper">
     {% include sidebar.html %}
