--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,11 @@ layout: compress
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
-{% include head.html %}
+  {% seo %}
+
+  {% include og.html %}
+
+  {% include head.html %}
 
 <body>
   {% include mwa.html %}
