--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,7 @@
 <!-- Javascript -->
 <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="{{ "assets/js/prism.js" | prepend: site.baseurl }}"></script>
 
 <!-- custom js -->
 <script type="text/javascript" src="assets/js/main.js"></script>
